Switching connectionstrings from app.config to database table (table "ConfigAllServers")

--- a/Work/Tools/CKGDatabaseAdminTool/CKGDatabaseAdminLib/CKGDatabaseAdminLib.csproj
+++ b/Work/Tools/CKGDatabaseAdminTool/CKGDatabaseAdminLib/CKGDatabaseAdminLib.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Services\ApplicationBapiDataServiceSql.cs" />
     <Compile Include="Services\ApplicationCopyDataServiceSql.cs" />
     <Compile Include="Services\SqlExecutionDataServiceSql.cs" />
+    <Compile Include="Services\Config.cs" />
     <Compile Include="Services\FieldTranslationCopyDataServiceSql.cs" />
     <Compile Include="Services\Bapi2Report4CsvExportDataServiceSql.cs" />
     <Compile Include="Services\BapiCheckDataService.cs" />
