--- a/dev/work/Tools/WpfTools4/WpfTools4.csproj
+++ b/dev/work/Tools/WpfTools4/WpfTools4.csproj
@@ -354,6 +354,9 @@
   <ItemGroup>
     <Resource Include="Images\32x32\sap_models.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\24x24\play.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
