--- a/Work/Tools/WpfTools4/WpfTools4.csproj
+++ b/Work/Tools/WpfTools4/WpfTools4.csproj
@@ -355,6 +355,9 @@
   <ItemGroup>
     <Resource Include="Images\32x32\sap_models.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\32x32\sql.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
