--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -711,6 +711,7 @@
     <Compile Include="Areas\Common\lib\Dashboard\Contracts\IDashboardDataService.cs" />
     <Compile Include="Areas\Common\lib\Dashboard\Models\DashboardItemAnnotator.cs" />
     <Compile Include="Areas\Common\lib\Dashboard\Models\Database\DashboardItem.cs" />
+    <Compile Include="Areas\Common\lib\Dashboard\Models\Database\DashboardItemOptions.cs" />
     <Compile Include="Areas\Common\lib\Dashboard\Models\Database\DashboardItemUser.cs" />
     <Compile Include="Areas\Common\lib\Dashboard\Services\DashboardAppUrlService.cs" />
     <Compile Include="Areas\Common\lib\Dashboard\Services\DashboardDataServiceSql.cs" />
