--- a/inetpub/wwwroot/ServicesMvc/Web.config
+++ b/inetpub/wwwroot/ServicesMvc/Web.config
@@ -73,7 +73,7 @@
     <add key="LayoutPageHeaderHint" value="Test-Server" />
   </appSettings>
   <system.web>
-    <compilation batch="false" debug="true" defaultLanguage="c#" maxBatchGeneratedFileSize="1000" maxBatchSize="1000" targetFramework="4.0" />
+    <compilation batch="false" debug="true" defaultLanguage="c#" maxBatchGeneratedFileSize="1000" maxBatchSize="1000" targetFramework="4.0" tempDirectory="r:\aspnet" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
