Several new partial views

--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -2857,6 +2857,7 @@
     <Content Include="Views\Fahrzeuge\Carportnacherfassung.cshtml" />
     <Content Include="Views\Fahrzeuge\Carporterfassung\NacherfassungSuche.cshtml" />
     <Content Include="Views\Fahrzeuge\Carporterfassung\FahrzeugnacherfassungForm.cshtml" />
+    <Content Include="Views\Shared\AppFavorites\UserMessages.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
