Support for Tag deletion

--- a/dev/Test/WpfComboboxAutocomplete/WpfComboboxAutocomplete/WpfComboboxAutocomplete.csproj
+++ b/dev/Test/WpfComboboxAutocomplete/WpfComboboxAutocomplete/WpfComboboxAutocomplete.csproj
@@ -77,6 +77,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\Images.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\LocalStyles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
