--- a/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
+++ b/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
@@ -128,6 +128,8 @@
     <Compile Include="General\Services\Database\Models\Contact.cs" />
     <Compile Include="General\Services\Database\Models\AccountingArea.cs" />
     <Compile Include="General\Services\Database\Models\GroupArchiveAssigned.cs" />
+    <Compile Include="General\Services\Database\Models\DataConverterProcessStructure.cs" />
+    <Compile Include="General\Services\Database\Models\DataConverterDataMapping.cs" />
     <Compile Include="General\Services\Database\Models\PersistableObjectContainer.cs" />
     <Compile Include="General\Services\Database\Models\LoginUserMessageConfirmations.cs" />
     <Compile Include="General\Services\Database\Models\WebUserInfo.cs" />
