Json data caching enhancements of "IPersistanceService" + reusable json data caching logic

--- a/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
+++ b/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
@@ -108,6 +108,7 @@
     <Compile Include="General\Models\Attributes\ZulassungsKreisAttribute.cs" />
     <Compile Include="General\Models\Attributes\VIN.cs" />
     <Compile Include="General\Models\ChartItemsPackage.cs" />
+    <Compile Include="General\Models\ChartItemsTick.cs" />
     <Compile Include="General\Models\DataModels\DocumentErstellenBearbeiten.cs" />
     <Compile Include="General\Models\DataModels\FahrzeugStatus.cs" />
     <Compile Include="General\Models\DataModels\Hersteller.cs" />
