--- a/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
+++ b/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
@@ -56,6 +56,14 @@
     <Reference Include="Ionic.Zip">
       <HintPath>..\..\GAC\Ionic.Zip.dll</HintPath>
     </Reference>
+    <Reference Include="LumenWorks.Framework.IO, Version=3.8.0.0, Culture=neutral, PublicKeyToken=5ad3ea2f85776344, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\GAC\LumenWorks.Framework.IO.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\GAC\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\GAC\NUnit\nunit.framework.dll</HintPath>
@@ -88,6 +96,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IAdressenDataService.cs" />
+    <Compile Include="DataConverter\Contracts\IDataConverterDataService.cs" />
+    <Compile Include="DataConverter\Models\DataConnection.cs" />
+    <Compile Include="DataConverter\Models\DataMappingModel.cs" />
+    <Compile Include="DataConverter\Models\DataMappingSelektor.cs" />
+    <Compile Include="DataConverter\Models\Field.cs" />
+    <Compile Include="DataConverter\Models\NewDataMappingSelektor.cs" />
+    <Compile Include="DataConverter\Models\Operation.cs" />
+    <Compile Include="DataConverter\Models\Processor.cs" />
+    <Compile Include="DataConverter\Models\ProcessStructure.cs" />
+    <Compile Include="DataConverter\Models\SourceFile.cs" />
+    <Compile Include="DataConverter\Models\JsonStructureGeneration\DataConverterStructure.cs" />
+    <Compile Include="DataConverter\Services\DataConverterDataService.cs" />
+    <Compile Include="DataConverter\ViewModels\DataConverterViewModel.cs" />
     <Compile Include="DomainCommon\Models\Adresse.cs" />
     <Compile Include="DomainCommon\Models\AddressModelMappings.cs" />
     <Compile Include="DomainCommon\Models\CommonSummary.cs" />
@@ -129,7 +150,8 @@
     <Compile Include="General\Services\Database\Models\AccountingArea.cs" />
     <Compile Include="General\Services\Database\Models\GroupArchiveAssigned.cs" />
     <Compile Include="General\Services\Database\Models\DataConverterProcessStructure.cs" />
-    <Compile Include="General\Services\Database\Models\DataConverterDataMapping.cs" />
+    <Compile Include="General\Services\Database\Models\DataConverterMappingInfo.cs" />
+    <Compile Include="General\Services\Database\Models\DataConverterMappingData.cs" />
     <Compile Include="General\Services\Database\Models\PersistableObjectContainer.cs" />
     <Compile Include="General\Services\Database\Models\LoginUserMessageConfirmations.cs" />
     <Compile Include="General\Services\Database\Models\WebUserInfo.cs" />
