--- a/Work/Tools/MvcTools/MvcTools.csproj
+++ b/Work/Tools/MvcTools/MvcTools.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Compile Include="Contracts\IGridColumnsAutoPersistProvider.cs" />
     <Compile Include="Contracts\IGridSettingsAdministrationProvider.cs" />
+    <Compile Include="Data\DynamicObjectConverter.cs" />
     <Compile Include="Models\GridSettings.cs" />
     <Compile Include="Web\AreaAutoRegistration.cs" />
     <Compile Include="Web\Attributes\NoCache.cs" />
