--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -228,6 +228,24 @@
     <Compile Include="App_Start\LocalizedRequiredAttributeAdapter.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Areas\Common\Content\Weather\images\01d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\01n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\02d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\02n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\03d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\03n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\04d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\04n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\09d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\09n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\10d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\10n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\11d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\11n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\13d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\13n.png" />
+    <Content Include="Areas\Common\Content\Weather\images\50d.png" />
+    <Content Include="Areas\Common\Content\Weather\images\50n.png" />
     <Content Include="assets\img\bg\1.jpg" />
     <Content Include="assets\img\bg\2.jpg" />
     <Content Include="assets\plugins\font-awesome\font\v2\fontawesome-webfont.svg" />
