--- a/Work/Tools/ServicesMvcTest/ServicesMvcTest.csproj
+++ b/Work/Tools/ServicesMvcTest/ServicesMvcTest.csproj
@@ -144,6 +144,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="App_Data\XmlData\Weather\JsonData\city.list.json" />
+    <None Include="App_Data\XmlData\Weather\JsonData\city.list.AT.json" />
+    <None Include="App_Data\XmlData\Weather\JsonData\city.list.CH.json" />
+    <None Include="App_Data\XmlData\Weather\JsonData\city.list.DE.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
