--- a/inetpub/wwwroot/Services/Web.config
+++ b/inetpub/wwwroot/Services/Web.config
@@ -221,6 +221,7 @@
         <httpModules>
             <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         </httpModules>
+    <httpCookies httpOnlyCookies="true" />
     </system.web>
     <location path="Info">
         <system.web>
