Adminseite Kundenbereich angepasst / neur Reiter Settings eringefügt / Man kann nun dem Kudnen die Möglichkeit geben Rechte zu verwalten

--- a/Work/ErpBase/Base.vbproj
+++ b/Work/ErpBase/Base.vbproj
@@ -202,6 +202,9 @@
     <Compile Include="Kernel\Admin\OrganizationList.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Kernel\Admin\RightList.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Kernel\Admin\VersichererList.vb">
       <SubType>Component</SubType>
     </Compile>
